# gltemplate

./: .gitattributes  .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE  README.de.md  README.md  cubemap_convert.sh
.github/workflows/: cmake-multi-platform.yml  cmake-pack-sources.yml
cmake/: AutoZipTool.cmake  DeploymentTool.cmake  FetchDependencies.cmake  ZippingTool.cmake
shaders/: background.frag  debug.frag  debug.glsl  example.frag  example.vert  projection.vert  random.glsl  raygen.vert  screen.vert  tangentspace.glsl  uniforms.glsl  voxels.frag
src/: config.hpp.in  example.cpp  example.hpp  main.cpp  mainapp.cpp  mainapp.hpp
src/demo/: CMakeLists.txt  mainapp.cpp  mainapp.hpp
src/example/: CMakeLists.txt  mainapp.cpp  mainapp.hpp
src/framework/: CMakeLists.txt  app.cpp  app.hpp  camera.cpp  camera.hpp  common.cpp  common.hpp  config.hpp.in  context.hpp.in  imguiutil.cpp  imguiutil.hpp  mesh.cpp  mesh.hpp  objparser.cpp  objparser.hpp  shader.cpp  shader.hpp  uniformbuffer.hpp  util.cpp  util.hpp  vao.cpp  vao.hpp
src/framework/gl/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  mesh.cpp  mesh.hpp  program.cpp  program.hpp  query.cpp  query.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniformbuffer.hpp  vertexarray.cpp  vertexarray.hpp
src/minimal/: CMakeLists.txt
src/minimalexample/: CMakeLists.txt  mainapp.cpp  mainapp.hpp
textures/: cubemap_convert.sh  test.hdr
textures/rnl/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
textures/stpeters/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
textures/studio/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
textures/uffizi/: nx.hdr  ny.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
